# reuton_whale

./: .env.example  .gitignore  ONE_PAGER.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  streamlit_app.py
config/: brief_schedule.json  llm_routing.yaml  signals.yaml  tg_channels.yaml  watched_addresses.csv
docs/: 01_초기기획서_Arxiv_Weekly.md  02_OnePager_WhaleScope.md  03_Architecture_WhaleScope.md  04_ClaudeCode_Prompt_Guide.md  05_ClaudeCode_Prompt_DesignRefactor.md  06_DesignCheck_ImprovementProposal.md  changelog.md  demo-output.md  nextjs-dashboard-development-plan.md  one-pager.md  operational-run-verification-result-2026-04-15.md  operational-run-verification.md
prompts/: daily_brief.full.system.en.txt  daily_brief.full.system.ja.txt  daily_brief.full.system.txt  daily_brief.full.user.en.txt  daily_brief.full.user.ja.txt  daily_brief.full.user.txt  daily_brief.incremental.system.en.txt  daily_brief.incremental.system.ja.txt  daily_brief.incremental.system.txt  daily_brief.incremental.user.en.txt  daily_brief.incremental.user.ja.txt  daily_brief.incremental.user.txt  daily_brief.system.en.txt  daily_brief.system.ja.txt  daily_brief.system.txt  daily_brief.user.en.txt  daily_brief.user.ja.txt  daily_brief.user.txt  nl_intent.system.txt  weekly_trend.system.txt
scripts/: backup_sheets_snapshot.py  create_telethon_session.py  demo_real_llm.py  design-check.mjs  diagnose_sheets_cells.py  import_curated_wallets.py  import_watched_addresses.py  init_postgres.py  init_sheets.py  manual_brief.py  run_bot.py  (+12 more)
(+397 files in other folders)
